cabal-version: 2.4
name:          aztecs-examples
version:       0.1.0.0

source-repository head
    type:     git
    location: https://github.com/aztecs-hs/aztecs.git

executable ecs
    main-is:          ECS.hs
    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:
        base,
        aztecs >=0.8 && <0.9,
        deepseq >=1

executable keyboard
    main-is:          Keyboard.hs
    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:
        base,
        aztecs >=0.8 && <0.9,
        aztecs-sdl >=0.5 && <0.6,
        sdl2

executable mouse
    main-is:          Mouse.hs
    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:
        base,
        aztecs >=0.8 && <0.9,
        aztecs-sdl >=0.5 && <0.6,
        sdl2

executable window
    main-is:          Window.hs
    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:
        base,
        aztecs >=0.8 && <0.9,
        aztecs-sdl >=0.5 && <0.6,
        sdl2

executable image
    main-is:          Image.hs
    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:
        base,
        aztecs >=0.8 && <0.9,
        aztecs-sdl >=0.5 && <0.6,
        aztecs-sdl-image >=0.5 && <0.6,
        sdl2

executable sprite
    main-is:          Sprite.hs
    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:
        base,
        aztecs >=0.8 && <0.9,
        aztecs-sdl >=0.5 && <0.6,
        aztecs-sdl-image >=0.5 && <0.6,
        sdl2

executable text
    main-is:          Text.hs
    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:
        base,
        aztecs >=0.8 && <0.9,
        aztecs-sdl >=0.5 && <0.6,
        aztecs-sdl-text >=0.5 && <0.6,
        sdl2
